style: fix icon spacing on button

--- a/src/app/shared/components/button/button.component.scss
+++ b/src/app/shared/components/button/button.component.scss
@@ -50,6 +50,14 @@ button {
       }
     }
   }
+
+  .left-icon-spacing {
+    margin-right: 8px;
+  }
+
+  .right-icon-spacing {
+    margin-right: 8px;
+  }
 }
 
 .smaller {
